feat: g-lens production-ready version

--- a/p/g-lens/index.html
+++ b/p/g-lens/index.html
@@ -17,8 +17,8 @@
         <span id="modalClose" class="close-button">&times;</span>
         <div id="chartContainer">
           <canvas id="countryChart"></canvas>
-          <canvas id="sectorChart"></canvas>
-          <canvas id="keywordChart"></canvas>
+          <canvas id="doughnutChart"></canvas>
+          <!-- <canvas id="keywordChart"></canvas> -->
         </div>
       </div>
     </div>
